--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,41 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
+  /* padding-top: 1rem; */
+  background: var(--accent);
   text-align: center;
+  position: relative;
+  min-height: 100vh;
+}
+
+.landing-cover {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% - 2rem);
+  z-index: 100;
+  box-shadow: inset 0 0 20px var(--accent);
+  pointer-events: none;
+  transition: top 0.3s ease, height 0.3s ease;
+  
+  /* Default: Somewhere in the middle */
+  top: -1rem;
+  height: calc(100vh + 2rem);
+  max-width: 1248px;
+}
+
+.landing-cover[data-at-top="true"] {
+  top: 1rem;
+  height: calc(100vh + 1rem);
+}
+
+.landing-cover[data-at-bottom="true"] {
+  height: calc(100vh - 0rem);
+}
+
+.landing-cover[data-at-top="true"][data-at-bottom="true"] {
+  height: calc(100vh - 2rem);
 }
 
 .logo {
