--- a/src/pages/Dashboard/AnalyticsPage.css
+++ b/src/pages/Dashboard/AnalyticsPage.css
@@ -57,7 +57,7 @@
   grid-column: 1 / -1;
 }
 
-.card-title {
+.card-title1 {
   font-family: var(--font-mono);
   font-size: 11px;
   text-transform: uppercase;
