--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -72,7 +72,7 @@
 
 .footer-bottom {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding-top: 2rem;
   border-top: 1px solid var(--border-subtle);
