--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 1rem;
-  /* padding-top: 1rem; */
-  background: var(--accent);
+  margin: 0;
+  padding: 0;
+  background: var(--bg-void);
   text-align: center;
   position: relative;
   min-height: 100vh;
@@ -11,31 +9,31 @@
 
 .landing-cover {
   position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  width: calc(100% - 2rem);
+  left: 0;
+  width: 100%;
   z-index: 100;
   box-shadow: inset 0 0 20px var(--accent);
   pointer-events: none;
-  transition: top 0.3s ease, height 0.3s ease;
-  
+  transition:
+    top 0.3s ease,
+    height 0.3s ease;
+
   /* Default: Somewhere in the middle */
-  top: -1rem;
-  height: calc(100vh + 2rem);
-  max-width: 1248px;
+  top: 0;
+  height: 100vh;
 }
 
 .landing-cover[data-at-top="true"] {
-  top: 1rem;
-  height: calc(100vh + 1rem);
+  top: 0;
+  height: 100vh;
 }
 
 .landing-cover[data-at-bottom="true"] {
-  height: calc(100vh - 0rem);
+  height: 100vh;
 }
 
 .landing-cover[data-at-top="true"][data-at-bottom="true"] {
-  height: calc(100vh - 2rem);
+  height: 100vh;
 }
 
 .logo {
