--- a/src/pages/Public/LegalPages.css
+++ b/src/pages/Public/LegalPages.css
@@ -5,6 +5,7 @@
   min-height: 100vh;
   padding: 100px 24px;
   color: var(--text-primary);
+  border-radius: 8px 8px 0px 0px;
 }
 
 .container-narrow {
