--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 #root {
-  margin: 0;
-  padding: 0;
-  background: var(--bg-void);
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 1rem;
+  /* padding-top: 1rem; */
+  background: var(--accent);
   text-align: center;
   position: relative;
   min-height: 100vh;
@@ -9,32 +11,33 @@
 
 .landing-cover {
   position: fixed;
-  left: 0;
-  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% - 2rem);
   z-index: 100;
   box-shadow: inset 0 0 20px var(--accent);
   pointer-events: none;
-  transition:
-    top 0.3s ease,
-    height 0.3s ease;
-
+  transition: top 0.3s ease, height 0.3s ease;
+  
   /* Default: Somewhere in the middle */
-  top: 0;
-  height: 100vh;
+  top: -1rem;
+  height: calc(100vh + 2rem);
+  max-width: 1248px;
 }
 
 .landing-cover[data-at-top="true"] {
-  top: 0;
-  height: 100vh;
+  top: 1rem;
+  height: calc(100vh + 1rem);
 }
 
 .landing-cover[data-at-bottom="true"] {
-  height: 100vh;
+  height: calc(100vh - 0rem);
 }
 
 .landing-cover[data-at-top="true"][data-at-bottom="true"] {
-  height: 100vh;
+  height: calc(100vh - 2rem);
 }
+
 
 .logo {
   height: 6em;
