--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -8,7 +8,7 @@
   /* max-width: 1200px; */
   z-index: 1000;
   transition: transform 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  max-width: 1400px;
+  /* max-width: 1400px; */
 }
 
 .header {
